# flask-course

./: .dockerignore  .editorconfig  .flaskenv  Dockerfile  README.md  app.py  development.http  pyproject.toml  requirements.txt
