[project]
name = "flask-course"
version = "0.0.1"
description = "Refresher Flask course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.1.0",
  "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
  "commitizen>=4.0.0",
  "ruff>=0.8.2",
  "pre-commit>=4.0.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
